motifs faites par v saluzzo

--- a/Calculette-version1/Base.lproj/Main.storyboard
+++ b/Calculette-version1/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="resetButtonWith_sender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5cO-Fo-eFv"/>
+                                                            <action selector="resetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TIM-Lx-Y53"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mgi-U6-80z">
